Restore overflow: hidden on tagselector groupbox to fix toolbar icons disappearing when dragging column 1/2 splitter to the left (thanks Sean)

--- a/chrome/skin/default/zotero/bindings/tagselector.css
+++ b/chrome/skin/default/zotero/bindings/tagselector.css
@@ -1,5 +1,6 @@
 groupbox
 {
+	overflow: hidden;
 	min-height: 132px;
 	padding-bottom: 2px;
 }
